home, destination mobile responsiveness fix

--- a/space-tourism-res/CSS/common-style.css
+++ b/space-tourism-res/CSS/common-style.css
@@ -68,3 +68,25 @@ p {
     margin-bottom: 5rem;
     margin-top: 2rem;
 }
+
+@media (max-width: 767px) {
+    h1 {
+        font-size: 6rem;
+    }
+
+    h5 {
+        font-size: 1.2rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    h4 {
+        font-size: 1.5rem;
+    }
+
+    h2 {
+        font-size: 4rem;
+    }
+ }
