--- a/space-tourism-res/CSS/destination-style.css
+++ b/space-tourism-res/CSS/destination-style.css
@@ -71,8 +71,12 @@ body {
     }
 
     p {
-        width: 70%;
+        width: 90%;
         margin: auto;
+    }
+
+    .destination-image {
+        width: 80%;
     }
 }
 
